# ViNo-rls

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
projects/coche/annotation/: [01-10003]10003_9.yaml
vino/: __init__.py  resources.qrc  resources_rc.py
vino/cli/: compileUI.py  startSoftware.py  updateSoftware.py
vino/gui/: indexor.py  labeler.py
vino/logic/: annotationManager.py  constants.py  flyout.py  globalSignals.py  globalVariables.py  indexor.py  labeler.py  slicer.py  utils.py
vino/materials/database/: ui_records.json
vino/tools/: split_csv_files.py
vino/ui_files/: indexor.ui  labeler.ui
